@@ -1,5 +1,10 @@
 2012-01-27  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
+	* src/interp/primitives.lisp: Improve qsqrt_DF and
+	qlog_DF.
+
+2012-01-27  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
 	* src/algebra/special2.spad.pamphlet: Improve ELIPIDF.
 
 2012-01-27  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
